k8s/deploy_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: NodePort
  selector:
    app: app-server
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: app-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
spec:
  selector:
    matchLabels:
      app: app-server
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      labels:
        app: app-server
    spec:
      containers:
      - name: app-server
        image: gcr.io/todo-app-20221107/go-app-test:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: app-server
