k8s/deploy_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-db-service
spec:
  type: ClusterIP
  selector:
    app: db-server
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: db-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server
spec:
  selector:
    matchLabels:
      app: db-server
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
      - name: db-server
        image: gcr.io/todo-app-20221107/mysql:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: db-server
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
