k8s/deploy_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-redis-service
spec:
  type: ClusterIP
  selector:
    app: redis-server
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
spec:
  selector:
    matchLabels:
      app: redis-server
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:                                                               
      - name: redis-server
        image: gcr.io/todo-app-20221107/redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
