k8s/deploy_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:    
  rules:    
    - host: localhost   
      http:    
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: go-app-service
                port:
                  number: 8080
